<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/fabContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:clipToPadding="false"
        android:orientation="vertical"
        app:layout_dodgeInsetEdges="bottom">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/mapStyleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/eight_dp"
            android:contentDescription="@string/map_style"
            app:fabCustomSize="36dp"
            app:maxImageSize="20dp"
            app:srcCompat="@android:drawable/ic_menu_mapmode" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/currentLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/eight_dp"
            app:fabCustomSize="36dp"
            app:maxImageSize="20dp"
            app:srcCompat="@drawable/ic_baseline_my_location_24px" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/toggleLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/eight_dp"
            android:contentDescription="@string/toggle_event_log"
            app:fabCustomSize="36dp"
            app:maxImageSize="20dp"
            app:srcCompat="@android:drawable/ic_menu_recent_history" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/newReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabCustomSize="36dp"
            app:maxImageSize="20dp"
            app:srcCompat="@drawable/ic_baseline_add_24px" />
    </LinearLayout>

    <!-- Geofence creation overlay -->
    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/marker"
            android:layout_width="@dimen/forty_eight_dp"
            android:layout_height="@dimen/forty_eight_dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/marker_content_description"
            app:srcCompat="@drawable/ic_twotone_location_on_48px" />

        <LinearLayout
            android:id="@+id/container_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#ffffff"
            android:elevation="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/instructionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/eight_dp"
                android:textColor="#000"
                android:textSize="@dimen/eighteen_sp"
                tools:text="@string/instruction_where_description" />

            <TextView
                android:id="@+id/instructionSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/eight_dp"
                android:text="@string/instruction_where_subtitle_description" />

            <SeekBar
                android:id="@+id/radiusBar"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/two_dp"
                android:layout_marginRight="@dimen/two_dp"
                android:max="4"
                android:progress="2" />

            <TextView
                android:id="@+id/radiusDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/four_dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/four_dp"
                tools:text="100 meters" />

            <EditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/thirteen_dp"
                android:layout_marginRight="@dimen/thirteen_dp"
                android:layout_marginBottom="@dimen/eight_dp"
                android:hint="@string/message_hint"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences"
                android:maxLines="1" />

            <Button
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/eight_dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/eight_dp"
                android:background="@drawable/bg_button"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/continue_description"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

    </RelativeLayout>

    <!-- Live event log bottom sheet -->
    <LinearLayout
        android:id="@+id/eventLogSheet"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:background="@drawable/bg_event_log_sheet"
        android:clickable="true"
        android:elevation="8dp"
        android:focusable="true"
        android:orientation="vertical"
        android:visibility="gone"
        app:behavior_hideable="true"
        app:behavior_peekHeight="56dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:layout_insetEdge="bottom">

        <!-- Handle bar -->
        <View
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/bg_handle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:paddingVertical="@dimen/eight_dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/event_log_title"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="@dimen/sixteen_sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/clearLog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:paddingHorizontal="@dimen/eight_dp"
                android:text="@string/clear_log"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/fourteen_sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1F000000" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/eventLogList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/eight_dp"
            tools:listitem="@layout/item_event_log" />

        <TextView
            android:id="@+id/eventLogEmpty"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/event_log_empty"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="@dimen/fourteen_sp"
            android:visibility="gone" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
